# sqclib

./: README.md  pyproject.toml
.github/workflows/: static.yml
docs/source/: conf.py  index.rst
examples/: simple.py
sqclib/: __init__.py  client.py  cmd.py
