[project]
name = "sqclib"
version = "0.2.5"
description = "Library for interacting with the Structure Quality Check server"
authors = [
    {name = "Martin Jediny", email = "jedinym@proton.me"},
]
dependencies = [
    "minio>=7.2.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
doc = [
    "sphinx>=7.2.6",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
sqc = "sqclib.cmd:main_cli"
